Change history
--------------

Beta 1
======

** Castle.Services.Logging **

- Merged Castle.Services.Logging.Web into Castle.Services.Logging.


Alpha Version 1.0.0
- First release

Future modifications - after the first release - shall be tracked in this file

10.22.2005 - Added support for Web versus Windows config file locations